# grid-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml  style-checks.yml
src/: cells.rs  grid.rs  grid_impl.rs  lib.rs  reference_cell.rs  traits.rs  types.rs
src/grid/: common.rs  flat_triangle_grid.rs  geometry.rs  grid.rs  mixed_grid.rs  single_element_grid.rs  surface_triangle_grid.rs  topology.rs  traits.rs  traits_impl.rs
src/grid/flat_triangle_grid/: builder.rs  geometry.rs  grid.rs  topology.rs
src/grid/mixed_grid/: builder.rs  geometry.rs  grid.rs  topology.rs
src/grid/single_element_grid/: builder.rs  geometry.rs  grid.rs  topology.rs
src/grid/surface_triangle_grid/: cell.rs  geometry.rs  grid.rs  reference_map.rs  topology.rs  vertex.rs
src/grid_impl/: common.rs  flat_triangle_grid.rs  geometry.rs  grid.rs  mixed_grid.rs  serial_grid.rs  single_element_grid.rs  topology.rs  traits.rs
src/grid_impl/flat_triangle_grid/: geometry.rs  grid.rs  topology.rs
src/grid_impl/mixed_grid/: geometry.rs  grid.rs  topology.rs
src/grid_impl/single_element_grid/: geometry.rs  grid.rs  topology.rs
src/traits/: builder.rs  cell.rs  element.rs  geometry.rs  grid.rs  map.rs  point.rs  reference_map.rs  topology.rs  vertex.rs
src/types/: cell_iterator.rs  vertex_iterator.rs
