[package]
name = "grid-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
bempp-traits = { git = "https://github.com/bempp/bempp-rs.git", branch = "mscroggs/pub-adj-list" }
bempp-tools = { git = "https://github.com/bempp/bempp-rs.git", branch = "mscroggs/pub-adj-list" }
bempp-element = { git = "https://github.com/bempp/bempp-rs.git", branch = "mscroggs/pub-adj-list" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git" }
